<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnGeridon_4"
        android:layout_width="172dp"
        android:layout_height="63dp"
        android:layout_marginBottom="4dp"
        android:onClick="uyg4BtnGeridon"
        android:text="@string/geridon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtNot"
        app:layout_constraintVertical_bias="0.972" />

    <Switch
        android:id="@+id/switchKonumServisleri"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:text="@string/konum_servisleri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Switch
        android:id="@+id/switchKonumBilgileriniAl"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:text="@string/konum_bilgilerini_al"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <Switch
        android:id="@+id/switchKonumBilgileriniGoster"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:text="@string/konum_bilgilerini_goster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <Button
        android:id="@+id/btnCalistirUyg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg4BtnCalistir"
        android:text="Çalıştır"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />
</androidx.constraintlayout.widget.ConstraintLayout>